# rust-ad-blocker

./: .gitignore  Cargo.toml  README.md  V1_DEVELOPMENT_GUIDE.md  config.example.toml  config.toml  serverConfig.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
.zed/: settings.json
blocklists/: default.txt
scripts/: install.ps1  install.sh
src/: blocklist.rs  config.rs  error.rs  main.rs  metrics.rs  server.rs
src/admin/: domains.rs  mod.rs  routes.rs  state.rs
src/blocklist/: encoding.rs  loader.rs  mod.rs  persistence.rs
src/dns/: cache.rs  handler.rs  mod.rs  packet.rs  response.rs  upstream.rs
static/admin/: app.js  index.html  styles.css
