[package]
name = "AdBloacker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
hickory-proto = "0.24"
reqwest = "0.13.2"
