[package]
name = "AdBloacker"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
hickory-proto = "0.24"
reqwest = "0.13.2"
bytes = "1.11.1"
parking_lot = "0.12.5"
dashmap = "5.5"
lru = "0.16.3"
