[package]
name = "AdBloacker"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.30", features = ["rt-multi-thread", "net", "macros", "time", "sync", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
bytes = "1.11.1"
parking_lot = "0.12.5"
dashmap = "5.5"
lru = "0.16.3"
ahash = "0.8"
include_dir = "0.7"
mime_guess = "2.0"
